--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1> BM PROD</h1>
+    <h1> BM PROD & Dbounce </h1>
     <img src="./images/portrait_max2.jpg" alt="portrait Bm">
 
 
