--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
 
-    <h1> BM PROD & Dbounce </h1>
-    <img src="./images/portrait_max2.jpg" alt="portrait Bm">
+    <!-- NAVIGATION -->
+    <nav>
+        <ul class="nav">
+            <li> <a href="#home">HOME</a></li>
+            <li> <a href="#video"> Clips</a> </li>
+            <li> <a href="#prods"> Prods</a> </li>
+            <li> <a href="#about"> About</a> </li>
+        </ul>
+    </nav>
 
 
    <script src="./index.js"></script> 
