--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,8 @@
     </div>
     </header>
 
-
+ <!-- SECTION -->
+ <section> hello</section>
    <script src="./index.js"></script> 
 </body>
 </html>
