--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
             <li> <a href="#about"> About</a> </li>
         </ul>
     </nav>
+
+    <!-- HEADER -->
     <header>
         <div class="header-text">
             <h1 class="glitch"> Maxime SOMON </h1>
@@ -59,8 +61,25 @@
     </div>
     </header>
 
- <!-- SECTION -->
- <section> hello</section>
+ <!-- SECTION CLIPS -->
+ <section class="video" id="video">
+    <h1 class="titleGlitch"> CLIPS </h1>
+    <div class="wrapper-artist">
+        <img class="img-artist" src="./images/cover-captain.jpg" alt="">
+
+        <div class="block-text">
+            <div class="play">
+               <a href="https://youtu.be/Td6eIomoWwU" target="_blank"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
+                <h3 class='title-video'> Voir la vidéo </h3>
+            </div>
+            <h3 class="genre" >Rap</h3>
+            <h2>bm & <b>dbounce</b></h2>
+        </div>
+        <h4 class="title-aside"> Dikkenek Pro </h4>
+    </div>
+</section>
+
+
    <script src="./index.js"></script> 
 </body>
 </html>
