--- a/src/index.html
+++ b/src/index.html
@@ -67,39 +67,42 @@
     <div class="overlay"></div>
 
     <h1 class="titleGlitch"> CLIPS </h1>
-<div class="wrapper-clips">
 
-    <!-- Clip 1 -->
-    <div class="wrapper-artist">
-        <img class="img-artist" src="./images/cover-captain.jpg" alt="">
-    
-        <div class="block-text">
-            <div class="play">
-               <a href="clip1.html"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
-                <h3 class='title-video'> Voir la vidéo </h3>
+    <div class="wrapper-clips">
+
+        <!-- Clip1-->
+        <div class="wrapper-artist">
+            <img class="img-artist" src="./images/cover-captain.jpg" alt="">
+
+            <div class="block-text">
+                <div class="play">
+                   <a href="./clip1.html" target="_blank"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
+                    <h3 class='title-video'> Voir la vidéo </h3>
+                </div>
+                <h3 class="genre" >Rap</h3>
+                <h2>bm & <b>dbounce</b></h2>
             </div>
-            <h3 class="genre" >Rap</h3>
-            <h2>bm & <b>dbounce</b></h2>
+            <h4 class="title-aside"> captain </h4>
         </div>
-        <h4 class="title-aside"> Captain </h4>
-    </div>
-    <!--end clip1 -->
-    <!-- Clip 2 -->
-    <div class="wrapper-artist">
-        <img class="img-artist" src="./images/cover-lapiste.jpg" alt="">
-    
-        <div class="block-text">
-            <div class="play">
-               <a href="clip2.html"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
-                <h3 class='title-video'> Voir la vidéo </h3>
+        <!-- End Clip1-->
+
+        <!-- Clip1-->
+        <div class="wrapper-artist">
+            <img class="img-artist" src="./images/cover-lapiste.jpg" alt="">
+
+            <div class="block-text">
+                <div class="play">
+                   <a href="./clip2.html" target="_blank"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
+                    <h3 class='title-video'> Voir la vidéo </h3>
+                </div>
+                <h3 class="genre" >Rap</h3>
+                <h2>bm & <b>dbounce</b></h2>
             </div>
-            <h3 class="genre" >Rap</h3>
-            <h2>bm & <b>dbounce</b></h2>
+            <h4 class="title-aside"> La piste </h4>
         </div>
-        <h4 class="title-aside"> La piste </h4>
+        <!-- End Clip1-->
+
     </div>
-    <!--end clip2 -->
-</div>
 
 </section>
 
