section songs media query

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
     <!-- HEADER -->
     <header>
         <div class="header-text">
-            <h1 class="glitch"> Maxime SOMON </h1>
+            <!-- <h1 class="glitch"> Maxime SOMON </h1> -->
+            <h1 class="titleGlitch glitchstart"> MAxime somon  </h1>
         </div>
 
         <!-- HEADER VIDEO -->
@@ -42,6 +43,7 @@
 
         <div id="videoplyr">
             <!-- <video src="./pre 4.mp4" muted autoplay loop></video> -->
+            <img src="./images/cover-lapiste.jpg" alt="">
 
             <div class=" container-msg">
                 <span class="txt"> Nouveau clip &nbsp</span>
@@ -66,7 +68,7 @@
  <section class="video" id="video" data-barba="container" data-barba-namespace="home">
     <div class="overlay"></div>
 
-    <h2 class="titleGlitch"> CLIPS </h2>
+    <h1 class="titleGlitch glitchstart"> clips  </h1>
 
     <div class="wrapper-clips">
 
@@ -152,6 +154,15 @@
         <!-- end lecteur son 2 -->
     </div>
 </section>
+
+<!-- section About -->
+<section id="about" class="about">
+
+    <h1 class="titleGlitch glitchstart"> ABOUT  </h1>
+</section>
+
+
+
    <script src="./index.js"></script> 
 </body>
 </html>
