--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
    
 </head>
-<body data-barba="wrapper">
+<body>
 
     <!-- NAVIGATION -->
     <nav>
@@ -21,7 +21,7 @@
     </nav>
 
     <!-- HEADER -->
-    <header>
+    <header id="home">
         <div class="header-text">
             <!-- <h1 class="glitch"> Maxime SOMON </h1> -->
             <h1 class="titleGlitch glitchstart"> MAxime somon  </h1>
@@ -65,15 +65,14 @@
     </header>
 
  <!-- SECTION CLIPS -->
- <section class="video" id="video" data-barba="container" data-barba-namespace="home">
-    <div class="overlay"></div>
+ <section class="video" id="video">
 
-    <h1 class="titleGlitch glitchstart"> clips  </h1>
+    <h1 class="titleGlitch glitchstart"> Videos  </h1>
 
     <div class="wrapper-clips">
 
         <!-- Clip1-->
-        <div class="wrapper-artist">
+        <div class="wrapper-artist clip1">
 
             <img class="img-artist" src="./images/cover-captain.jpg" alt="">
 
@@ -83,7 +82,7 @@
                     <h3 class='title-video'> Voir la vidéo </h3>
                 </div>
             
-                <h3 class="genre" >Rap</h3>
+                <h3 class="genre" >Clip</h3>
                 <h2>bm & <b>dbounce</b></h2>
             </div>
             <h4 class="title-aside"> captain </h4>
@@ -91,7 +90,7 @@
         <!-- End Clip1-->
 
         <!-- Clip2-->
-        <div class="wrapper-artist">
+        <div class="wrapper-artist clip2">
             <img class="img-artist" src="./images/cover-lapiste.jpg" alt="">
 
             <div class="block-text">
@@ -99,69 +98,39 @@
                    <a href="./clip2.html" target="_blank"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
                     <h3 class='title-video'> Voir la vidéo </h3>
                 </div>
-                <h3 class="genre" >Rap</h3>
-                <h2>bm & <b>dbounce</b></h2>
-            </div>
-            <h4 class="title-aside"> La piste </h4>
-        </div>
-        <!-- End Clip2-->
-        <!-- Clip3-->
-        <div class="wrapper-artist">
-            <img class="img-artist" src="./images/cover-lapiste.jpg" alt="">
-
-            <div class="block-text">
-                <div class="play">
-                   <a href="./clip2.html" target="_blank"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
-                    <h3 class='title-video'> Voir la vidéo </h3>
-                </div>
-                <h3 class="genre" >Rap</h3>
+                <h3 class="genre" >clip</h3>
                 <h2>bm & <b>dbounce</b></h2>
             </div>
             <h4 class="title-aside"> La piste </h4>
         </div>
         <!-- End Clip3-->
+        <!-- Clip3-->
+        <div class="wrapper-artist clip3">
+            <img class="img-artist" src="./images/cover-onlyone.jpg" alt="">
 
+            <div class="block-text">
+                <div class="play">
+                   <a href="./clip2.html" target="_blank"> <img class="btn-play" src="./images/play-button.svg" alt=""></a>
+                    <h3 class='title-video'> Voir la vidéo </h3>
+                </div>
+                <h3 class="genre" >teaser</h3>
+                <h2> Maxime </b></h2>
+            </div>
+            <h4 class="title-aside"> The only one </h4>
+        </div>
+        <!-- End Clip3-->
     </div>
-
 </section>
 
 <!-- SEcTION SONGS -->
-<section id="songs"class="songs ">
-    <h1 class="titleGlitch glitchstart"> SONS  </h1>
+<section id="songs" class="songs">fgghjj</section>
 
-    <div class="container-songs">
-
-        <!-- lecteur son 1 -->
-        <div class="lecteur">
-            <div class="face front">
-                <h2> KETCHAAA !</h2>
-                <img class="icone-Headphone" src="./images/Headphones.svg" alt="">
-            </div>
-            <div class="face back">
-                <iframe src="https://open.spotify.com/embed/album/6JM8bRCvTHuGi481tChlfx" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-        </div>
-        <!-- end lecteur son 1 -->
-         <!-- lecteur son 2 -->
-         <div class="lecteur">
-            <div class="face front front2">
-                <h2> Tarantino</h2>
-                <img class="icone-Headphone" src="./images/Headphones.svg" alt="">
-                
-            </div>
-            <div class="face back">
-                <iframe src="https://open.spotify.com/embed/album/2eEQzc091AlSe1jdvIKGxZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-        </div>
-        <!-- end lecteur son 2 -->
-    </div>
-</section>
 
 <!-- section About -->
-<section id="about" class="about">
+<!-- <section id="about" class="about">
 
     <h1 class="titleGlitch glitchstart"> ABOUT  </h1>
-</section>
+</section> -->
 
 
 
